--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Top Up</string>
-    <string name="check_function">Check Balance</string>
-    <string name="add_function">Add Balance</string>
+    <string name="check_function">Check \nBalance</string>
+    <string name="add_function">Add \nBalance</string>
     <string name="tmobile">T-Mobile</string>
 </resources>
